Refactor code and test cases.